# cooldex

./: .bazelrc  .gitattributes  .gitignore  AGENTS.md  COMMON_MISTAKES.md  README.md  codex_scratchpad_local.md  justfile  package.json
.sangoi/: .gitignore  CHANGELOG.md  PROMPT_GUIDE.md  PROMPT_TO_SELF_TEMPLATE.md  README.md  prompt1.md  prompt2.md  prune-implementation-map.en.md  prune-implementation-map.md  sangoi_base_instructions.md  sangoi_subagent_instructions.md
.sangoi/docs/: developer-instructions-vs-base-comparison.md  event-watchdog-fix-reference.md  guia-sync-upstream-main-master.md  guide-reapply-accounts.md  guide-reapply-hard-auto-compact-warning.md  guide-reapply-manage_context.md  guide-reapply-mods-order.md  guide-reapply-sanitize.md  guide-reapply-subagents.md  interface-design-all-instructions-compilation.md  interface-design-instruction-sources.txt  mods-reapply-inventory-2026-02-09.md  plan-sync-upstream-main-master.md
.sangoi/handoffs/: AGENTS.md  HANDOFF_GUIDE.md  HANDOFF_LOG.md  HANDOFF_PROTOCOL.md  HANDOFF_TEMPLATE.md
.sangoi/local/: plan-2026-02-11-accounts-reapply.md  plan-2026-02-11-guides-feature-application.md  plan-2026-02-12-finalize-accounts-handoff.md  plan-2026-02-12-guide-reapply-implementation.md  plan-2026-02-12-manage_context-port.md  prompt-to-self-2026-02-09-accounts-reapply.md  prompt-to-self-2026-02-10-instructions-audit.md  prompt-to-self-2026-02-11-accounts-reapply-clean-session.md
.sangoi/planning/: 2025-12-20_manage-context-v2.md  AGENTS.md
.sangoi/plans/: 2026-02-12-interface-design-all-instructions-md-plan.md  2026-02-12-interface-design-frontend-instructions-plan.md  2026-02-13-sanitize-compact-regression-plan.md  plan-auth-json-multi-instance.md  (+19 more)
codex-rs/: Cargo.toml  README.md
codex-rs/account-state/: BUILD.bazel  Cargo.toml
codex-rs/account-state/src/: lib.rs
codex-rs/login/: Cargo.toml
codex-rs/login/src/: device_code_auth.rs  lib.rs  server.rs  token_data.rs  token_data_tests.rs
codex-rs/login/src/auth/: account_manager.rs  account_runtime_context.rs  agent_identity.rs  auth_tests.rs  external_bearer.rs  manager.rs  mod.rs  storage.rs  storage_tests.rs
codex-rs/login/tests/suite/: auth_refresh.rs  device_code_login.rs  login_server_e2e.rs  logout.rs
docs/: advanced.md  authentication.md  config.md  contributing.md  guide_reapply_recall.md  local-config.toml  manage_context.md  manage_context_cheatsheet.md  manage_context_model.md  multi-account-auth-plan.md  multi_agent_mvp_plan.md  recall.md  slash_commands.md  tui-chat-composer.md
mcp-sangoi-ia/: .env.example  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
mcp-standalone/: README.md  package-lock.json  package.json
scripts/: cargo-guard.sh  setup-centralized-rust-cargo.sh  start-codex-exec.sh  test-remote-env.sh
(+874 files in other folders)
