[package]
name = "codex-account-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Merge-safety anchor: WS12 account-state crate must stay wired as the SQLite owner
# for saved-account usage truth during the staged auth-store cutover.
anyhow = { workspace = true }
chrono = { workspace = true }
codex-protocol = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
